# Checkers_With_IA

./: CMakeLists.txt  CheckersIA.cpp  Makefile  README.md  main.cpp
Checkers/: Button.cpp  Button.h  Checkers_Board.cpp  Checkers_Board.h  Checkers_Functions.cpp  Checkers_Functions.h  Checkers_Piece.cpp  Checkers_Piece.h  Checkers_Square.cpp  Checkers_Square.h  Checkers_Variables.cpp  Checkers_Variables.h  Constants.cpp  Constants.h  Error.cpp  Error.h  Filler.cpp  Filler.h  Game_Board.cpp  Game_Board.h  Main.cpp  Square.cpp  Square.h  Start.cpp  Start.h  main.cpp
objects/: Drawable.cpp  Drawable.h  Game.cpp  Game.h  Piece.cpp  Piece.h  Player.cpp  Player.h  Table.cpp  Table.h  TableBase.cpp  TableBase.h  Utils.h
objects/players/: Human.cpp  Human.h  IA.cpp  IA.h  IATable.cpp  IATable.h  IAmove.cpp
utils/: SDLfunctions.cpp  SDLfunctions.h  sdlfunctions.h
